--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Lazy River Nursery</title>
+    </head>
+
 <h1>Lazy River Nursery</h1>
+<h2>Home</h2>
 <br>
+<body>
 <img src = "starter_files/images/store-interior.jpg">
 <nav class ="Menu">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="/in-stock.html">In Stock</a></li>
-        <li><a href="info.html">More Info</a></li>
-    </ul>
+        <a href="index.html">Home<a>
+        <a href="/Users/dmeyers/MomentumHomework/3pageWebpage/html--small-business-DeeMeyers/in-stock.html">In Stock</a>
+        <a href="/Users/dmeyers/MomentumHomework/3pageWebpage/html--small-business-DeeMeyers/info.html">More Info</a>
 </nav>
 
+<p>
+    Lazy River Nursery and Garden Supply has been serving the garden needs of 
+    the Tri-State area since 1976. We have supplies 
+    for everyone from the small hobby gardener to landscaping contractors.
+</p>
+<p>
+    At Lazy River, our staff are knowledgable about horticulture 
+    and can give you expert advice. We have very low turnover, 
+    so you can feel confident knowing that we'll remember your 
+    gardening needs and can help you manage your garden for years to come.
+</p>
+<p>
+    Always friendly, always affordable, always 
+    green - that's the Lazy River Way!
+</p>
+</body>
+</html>
 
