fixed menu links

--- a/in-stock.html
+++ b/in-stock.html
@@ -7,8 +7,8 @@
     <h2>Currently In Stock</h2>
     <nav class ="Menu">
         <a href="index.html">Home<a>
-        <a href="/Users/dmeyers/MomentumHomework/3pageWebpage/html--small-business-DeeMeyers/in-stock.html">In Stock</a>
-        <a href="/Users/dmeyers/MomentumHomework/3pageWebpage/html--small-business-DeeMeyers/info.html">More Info</a>
+        <a href="in-stock.html">In Stock</a>
+        <a href="info.html">More Info</a>
     </nav>
 
     <body>
