--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <img src = "starter_files/images/store-interior.jpg">
 <nav class ="Menu">
         <a href="index.html">Home<a>
-        <a href="/Users/dmeyers/MomentumHomework/3pageWebpage/html--small-business-DeeMeyers/in-stock.html">In Stock</a>
-        <a href="/Users/dmeyers/MomentumHomework/3pageWebpage/html--small-business-DeeMeyers/info.html">More Info</a>
+        <a href="in-stock.html">In Stock</a>
+        <a href="info.html">More Info</a>
 </nav>
 
 <p>
